# zokrates_nova

./: Cargo.toml  README.md
circuits/keccak_groth16/: Makefile  keccak.zok
circuits/keccak_nova/: keccak.zok
keccak/: Cargo.toml
keccak/src/: lib.rs
