[package]
name = "keccak-nova"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-core = { git = "https://github.com/gakonst/ethers-rs" }
serde = "1.0.152"
serde_json = "1.0.61"
serde_tuple = "0.5.0"
zokrates_abi = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
zokrates_ark = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
zokrates_ast = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
zokrates_field = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
zokrates_interpreter = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
zokrates_proof_systems = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
zokrates_bellperson = { git = "https://github.com/ZoKrates/ZoKrates", branch = "zokrates-nova" }
rand_0_8 = { version = "0.8", package = "rand" }
